creusot/tests/should_fail/prusti/calls/cur_fin.stderr
error[creusot]: `'x` must match the current time slice `'curr`
  --> cur_fin.rs:13:9
   |
13 |     cur(x)
   |         ^

error: aborting due to previous error

